--- a/Lab08/lab08styles.css
+++ b/Lab08/lab08styles.css
@@ -27,3 +27,39 @@ nav a:hover {
   background-color:#00008B;
   color: white;
 }
+
+.banner {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+img.float-left {
+  float: left;
+  margin-right: 15px;
+  margin-bottom: 10px;
+}
+
+img.float-right {
+  float: right;
+  margin-left: 15px;
+  margin-bottom: 10px;
+}
+
+footer {
+  background-color: #f5f5f5;
+  padding: 10px;
+  overflow: auto; /* ensures the footer contains the floated element */
+}
+
+footer .copyright {
+  float: left;
+  margin: 0;
+}
+
+footer .tagline {
+  float: right;
+  margin: 0;
+  font-style: italic;
+  color: #333;
+}
