--- a/Lab09/lab09styles.css
+++ b/Lab09/lab09styles.css
@@ -30,33 +30,33 @@ nav a:hover {
 .flex1, .flex2 {
             display: flex;
             justify-content: space-between;
-            gap: 20px; /* space between columns */
+            gap: 20px; 
             margin: 20px;
         }
 
-        /* Step 11: Background colors, rounding, spacing */
+        
         .addressbox, .linksbox, .formbox, .mapbox {
             background-color: #f0f0f0;
             border-radius: 15px;
             padding: 20px;
-            flex-basis: 50%; /* each takes half the row */
+            flex-basis: 50%; 
             box-sizing: border-box;
         }
 
         .addressbox {
-            background-color: #cfe8fc;
+            background-color: #6FB8EB;
         }
 
         .linksbox {
-            background-color: #d4f7d0;
+            background-color: #47A4E6;
         }
 
         .formbox {
-            background-color: #fff3cd;
+            background-color: #47A4E6;
         }
 
         .mapbox {
-            background-color: #f5d0d0;
+            background-color: #6FB8EB;
         }
 
         nav {
