--- a/Lab09/lab09styles.css
+++ b/Lab09/lab09styles.css
@@ -53,7 +53,7 @@ nav a:hover {
 
         .formbox {
             background-color: #47A4E6;
-            padding-right: 10pxs;
+            padding-right: 10px;
         }
 
         .mapbox {
