nav style changes for lab 10

--- a/Lab10/lab10skillstyles.css
+++ b/Lab10/lab10skillstyles.css
@@ -32,6 +32,18 @@ body {
     margin: 30px;
     background-color: #fafafa;
 }
+/* Lab 10 Changes*/
+@media screen and (max-width: 768px) {
+
+  nav a {
+    display: block;
+    width: 100%;
+    margin: 8px 0; 
+  }
+  nav span {
+    display: none;
+  }
+}
 
 
 .pageheading {
