--- a/Lab10/lab10styles.css
+++ b/Lab10/lab10styles.css
@@ -27,6 +27,18 @@ nav a:hover {
   background-color:#00008B;
   color: white;
 }
+/* Lab 10 Changes*/
+@media screen and (max-width: 768px) {
+
+  nav a {
+    display: block;
+    width: 100%;
+    margin: 8px 0; 
+  }
+  nav span {
+    display: none;
+  }
+}
 .flex1, .flex2 {
             display: flex;
             justify-content: space-between;
@@ -53,7 +65,6 @@ nav a:hover {
 
         .formbox {
             background-color: #47A4E6;
-            padding-right: 10px;
         }
 
         .mapbox {
