--- a/Lab13/lab13skillstyles.css
+++ b/Lab13/lab13skillstyles.css
@@ -1,3 +1,19 @@
+/* Skip link for keyboard accessibility */
+.skip-link {
+    position: absolute;
+    top: -40px;
+    left: 0;
+    background: #000;
+    color: #fff;
+    padding: 8px;
+    text-decoration: none;
+    z-index: 100;
+}
+
+.skip-link:focus {
+    top: 0;
+}
+
 nav {
   background-color: #ADD8E6;
   color: black;
@@ -27,11 +43,19 @@ nav a:hover {
   background-color:#00008B;
   color: white;
 }
+
+/* Enhanced focus indicators for accessibility */
+a:focus, button:focus, input:focus, textarea:focus {
+    outline: 3px solid #0077cc;
+    outline-offset: 2px;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 30px;
     background-color: #fafafa;
 }
+
 /* Lab 10 Changes*/
 @media screen and (max-width: 768px) {
 
